@@ -1,3 +1,8 @@
+2010-10-04 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
+	
+	* InterfaceOutput.cxx: bug fix: matching information is again written out correctly 
+	* tag KLFitter-00-03-06
+
 2010-10-03 Johannes Erdmann <johannes.erdmann@cern.ch>
 	
 	* remove DetectorAtlas, Detector, ResDoubleGaussE
